changed font on next button to prevent text clipping

--- a/src/App.css
+++ b/src/App.css
@@ -60,16 +60,19 @@ a {
 }
 #next-wrapper {
   position: absolute;
-  width: 10rem;
+  width: 12rem;
   padding: 1vh 2vw 1vh 1vw;
   bottom: 2vh;
   right: -1vh;
   text-align: left;
   z-index: 1;
 }
+#next-wrapper > button {
+  width: 100%;
+}
 #totaliser-wrapper {
   position: absolute;
-  width: 10rem;
+  width: 12rem;
   padding: 1vh 2vw 1vh 1vw;
   top: 30vh;
   right: -1vh;
